[package]
name = "base85"
version = "2.0.0"
authors = ["Jon Yoder <jon@yoder.cloud>"]
edition = "2021"
description = "A library for Base85 encoding as described in RFC1924"
readme = "README.md"
homepage = "https://github.com/darkwyrm/base85"
repository = "https://github.com/darkwyrm/base85"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["base85", "encode", "decode"]
categories = ["encoding"]
exclude = [".gitignore"]

[dependencies]
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.8.5"
anyhow = "1.0.71"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "encode_noalloc"
harness = false

[[bench]]
name = "encode_noalloc_remapped"
harness = false
