[package]
name = "base85"
version = "1.0.0"
authors = ["gerald Hermant"]
edition = "2021"
description = "A fast library for Base85 encoding as described in RFC1924"
readme = "README.md"
homepage = "https://github.com/geraldhmt/base85"
repository = "https://github.com/geraldhmt/base85"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["base85", "rfc1924", "encode", "decode"]
categories = ["encoding"]
exclude = [".gitignore"]

[dependencies]
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0"
anyhow = "1.0.71"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "encode_noalloc"
harness = false
